@@ -28,14 +28,19 @@
 
 #include "AffineTransform.h"
 #include "GraphicsContext.h"
-#include "NotImplemented.h"
 
 namespace WebCore {
 
 QBrush Pattern::createPlatformPattern(const AffineTransform& transform) const
 {
-    notImplemented();
-    return QBrush();
+    QPixmap* pixmap = tileImage()->nativeImageForCurrentFrame();
+    if (!pixmap)
+        return QBrush();
+
+    QBrush brush(*pixmap);
+    brush.setMatrix(transform);
+
+    return brush;
 }
 
 }
